--- a/maps/san_jose_8.html
+++ b/maps/san_jose_8.html
@@ -31,23 +31,13 @@
 <g id="Rooms">
 
 	<!--ROOMS-->
-<polygon room data-name="penthouse" data-available="true" popover="penthouse!" popover-trigger="mouseenter" class="room" points="106.75,240.25 146,278.75 167,249.25 
-		134.75,217.25 	" />
-<polygon room data-name="bungalow" data-available="false" popover="bungalow!" popover-trigger="mouseenter" class="room" points="147,279.75 177.5,298.75 
-		193.75,266.25 167,249.25 	" />
-<polygon room data-name="houseboat" data-available="true" popover="houseboat!" popover-trigger="mouseenter" class="room" points="194.667,266.667 178.333,298.75 
-		212,312.833 223.833,277.75 	" />
-<polygon room data-name="lanai" data-available="false" popover="lanai!" popover-trigger="mouseenter" class="room" points="223.75,277.75 212,312.833 
-	249.75,320.75 254.75,284.75 	" />
-<polygon room data-name="wigwam" data-available="true" popover="wigwam!" popover-trigger="mouseenter" class="room" points="257.5,270.75 249.75,320.75 
-284.25,323.25 284.25,270.75 	" />
-
-
-<polygon room data-name="castle" data-available="true" popover="castle!" popover-trigger="mouseenter" class="room" points="327.5,268.75 327.5,322.25 
-	337.75,322.25 337.75,335 385.75,335 385.75,348 411,348 411,268.75 	" />
-
+<polygon room data-name="penthouse" data-available="true" popover="penthouse!" popover-trigger="mouseenter" class="room" points="106.75,240.25 146,278.75 167,249.25 134.75,217.25" />
+<polygon room data-name="bungalow" data-available="false" popover="bungalow!" popover-trigger="mouseenter" class="room" points="147,279.75 177.5,298.75 193.75,266.25 167,249.25" />
+<polygon room data-name="houseboat" data-available="true" popover="houseboat!" popover-trigger="mouseenter" class="room" points="194.667,266.667 178.333,298.75 212,312.833 223.833,277.75" />
+<polygon room data-name="lanai" data-available="false" popover="lanai!" popover-trigger="mouseenter" class="room" points="223.75,277.75 212,312.833 249.75,320.75 254.75,284.75" />
+<polygon room data-name="wigwam" data-available="true" popover="wigwam!" popover-trigger="mouseenter" class="room" points="257.5,270.75 249.75,320.75 284.25,323.25 284.25,270.75" />
+<polygon room data-name="castle" data-available="true" popover="castle!" popover-trigger="mouseenter" class="room" points="327.5,268.75 327.5,322.25 337.75,322.25 337.75,335 385.75,335 385.75,348 411,348 411,268.75" />
 <rect room data-name="farmhouse" data-available="true" popover="farmhouse!" popover-trigger="mouseenter" x="550.5" y="224.667" class="room" width="31.833" height="36.833" />
-
 <rect room data-name="adobe" data-available="true" popover="adobe!" popover-trigger="mouseenter" x="550.5" y="100" class="room" width="31.833" height="51.5" />
 </g>
 </svg>
