--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li ng-class="{active: locationSelected == 'sj7' || locationSelected == ''}"><a ng-href="#/sj7" ng-click="locationSelected='sj7'">SJ7</a></li>
-          <li ng-class="{active: locationSelected == 'sj8'}"><a ng-href="#/sj8" ng-click="locationSelected='sj8'">SJ8</a></li>
+          <li class="sj7" ng-class="{active: locationSelected == 'sj7'}"><a ng-href="#/sj7" ng-click="locationSelected='sj7'">SJ7</a></li>
+          <li class="sj8" ng-class="{active: locationSelected == 'sj8'}"><a ng-href="#/sj8" ng-click="locationSelected='sj8'">SJ8</a></li>
         </ul>
         <h3 class="text-muted">Room Finder</h3>
       </div>
