working with two way binding

--- a/maps/san_jose_8.html
+++ b/maps/san_jose_8.html
@@ -31,7 +31,7 @@
 <g id="Rooms">
 
 	<!--ROOMS-->
-<polygon room data-name="penthouse" data-available="true" popover="penthouse!" popover-trigger="mouseenter" class="room" points="106.75,240.25 146,278.75 167,249.25 134.75,217.25" />
+<polygon room data-name="penthouse" data-available="true" popover="penthouse!" popover-trigger="mouseenter" class="room" points="106.75,240.25 146,278.75 167,249.25 134.75,217.25" data-params="{{rooms.penthouse}}"/>
 <polygon room data-name="bungalow" data-available="false" popover="bungalow!" popover-trigger="mouseenter" class="room" points="147,279.75 177.5,298.75 193.75,266.25 167,249.25" />
 <polygon room data-name="houseboat" data-available="true" popover="houseboat!" popover-trigger="mouseenter" class="room" points="194.667,266.667 178.333,298.75 212,312.833 223.833,277.75" />
 <polygon room data-name="lanai" data-available="false" popover="lanai!" popover-trigger="mouseenter" class="room" points="223.75,277.75 212,312.833 249.75,320.75 254.75,284.75" />
