--- a/maps/san_jose_8.html
+++ b/maps/san_jose_8.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html ng-app="bookmeApp">
 <head>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
-  <script src="ui-bootstrap-tpls-0.9.0.min.js"></script>
-	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<link href="app.css" rel="stylesheet">
+    <script src="ui-bootstrap-tpls-0.9.0.min.js"></script>
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
 </head>
 <body>
 
 <div ng-controller="sanJoseCtrl">
 
-<!-- <svg width="400" height="110"  >
-   <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="true" room popover="Castle!" popover-trigger="click" popover-placement="bottom"/>
-</svg> 
-<svg width="400" height="110"  >
-   <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="false" room popover="Castle!" popover-trigger="mouseenter"/>
-</svg>  -->
+    <!-- <svg width="400" height="110"  >
+       <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="true" room popover="Castle!" popover-trigger="click" popover-placement="bottom"/>
+    </svg>
+    <svg width="400" height="110"  >
+       <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="false" room popover="Castle!" popover-trigger="mouseenter"/>
+    </svg>  -->
 
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
 <g id="Layer_3">
-	
-		<image style="overflow:visible;" width="2100" height="1352" xlink:href="SanJose8.jpg"  transform="matrix(0.3004 0 0 0.3004 2.9553 2.4286)">
-	</image>
+	<image style="overflow:visible;" width="2100" height="1352" xlink:href="SanJose8.jpg"  transform="matrix(0.3004 0 0 0.3004 2.9553 2.4286)" />
 </g>
 <g id="Rooms">
 
@@ -37,6 +35,7 @@
 <polygon room class="room" points="327.5,268.75 327.5,322.25 337.75,322.25 337.75,335 385.75,335 385.75,348 411,348 411,268.75"  data-params="{{rooms.castle}}"/>
 <rect room x="550.5" y="224.667" class="room" width="31.833" height="36.833"  data-params="{{rooms.farmhouse}}"/>
 <rect room x="550.5" y="100" class="room" width="31.833" height="51.5"  data-params="{{rooms.adobe}}"/>
+
 </g>
 </svg>
 
@@ -45,6 +44,6 @@
 <script src="bookmeApp.js"></script>
 <script src="sanJoseCtrl.js"></script>
 <script src="sanJoseDirective.js"></script>
- 
+
 </body>
 </html>
