--- a/maps/san_jose_8.html
+++ b/maps/san_jose_8.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="bookmeApp">
 <head>
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
     <script src="ui-bootstrap-tpls-0.9.0.min.js"></script>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="app.css" rel="stylesheet">
 </head>
 <body>
 
@@ -44,6 +44,7 @@
 <script src="bookmeApp.js"></script>
 <script src="sanJoseCtrl.js"></script>
 <script src="sanJoseDirective.js"></script>
+<script src="roomService.js"></script>
 
 </body>
 </html>
