--- a/maps/san_jose_7.html
+++ b/maps/san_jose_7.html
@@ -13,63 +13,33 @@
 <body>
 
 <div ng-controller="sanJoseCtrl">
-
-    <!-- <svg width="400" height="110"  >
-       <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="true" room popover="Castle!" popover-trigger="click" popover-placement="bottom"/>
-    </svg>
-    <svg width="400" height="110"  >
-       <rect width="400" height="110" stroke="green" stroke-width="4" fill="yellow" data-name="castle" data-available="false" room popover="Castle!" popover-trigger="mouseenter"/>
-    </svg>  -->
-
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
-<g id="_x38_" style="display:none;">
-
-		<image style="display:inline;overflow:visible;" width="2100" height="1352" xlink:href="SanJose7.jpg"  transform="matrix(0.3004 0 0 0.3004 2.9553 2.4286)">
-	</image>
-</g>
 <g id="_x37_">
-
-		<image style="overflow:visible;" width="2100" height="1352" xlink:href="SanJose7.jpg"  transform="matrix(0.3013 0 0 0.3013 0.6746 -7.629395e-06)">
-	</image>
+	<image style="overflow:visible;" width="2100" height="1352" xlink:href="SanJose7.jpg"  transform="matrix(0.3013 0 0 0.3013 0.6746 -7.629395e-06)" />
 </g>
 <g id="_x37__Rooms">
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="57,139.75 74.792,190 103,174.5
-		102.333,138.667 	"/>
-	<path style="fill:#FFCF5B;stroke:#000000;stroke-width:3;stroke-miterlimit:10;" d="M113.75,258.25"/>
-	<rect x="435.25" y="332.5" style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" width="45" height="27.75"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="481.75,332.5 481.75,360.25
-		483.512,360.25 483.512,372.5 508.992,372.5 508.992,333.5 	"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="508.992,333.5 508.992,372.5
-		581.75,372.5 581.75,334 	"/>
-	<path style="fill:#FFCF5B;stroke:#000000;stroke-miterlimit:10;" d="M268.667,205.533"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="177.667,276.667 178.333,298.75
-		223,314.833 222.833,277.75 	"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="222.833,277.75 223,314.833
-		284.25,323.25 284.25,277.667 	"/>
-
-		<rect x="445.75" y="147.5" style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" width="33.692" height="21.815"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="330.198,257 330.198,320.989
-		337.042,320.989 337.042,333.5 381.868,333.5 381.868,312.75 381.868,257 	"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="381.868,333.5 383.976,333.5
-		383.976,346.375 410.716,346.375 410.852,313.5 381.868,313.75 	"/>
-	<polygon style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" points="435.25,313.5 410.852,313.5
-		410.716,346.375 435.25,346.375 	"/>
-	<rect x="206" y="38.5" style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" width="153.5" height="94.5"/>
-
-		<rect x="230.5" y="217.5" style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" width="38.167" height="40.75"/>
-
-		<rect x="268.667" y="217.5" style="fill:#FFCF5B;stroke:#000000;stroke-width:2;stroke-miterlimit:10;" width="27.333" height="40.75"/>
+	<polygon room class="room" points="57,139.75 74.792,190 103,174.5 102.333,138.667" data-params="{{rooms.gazebo}}"/>
+    <polygon room class="room" points="177.667,276.667 178.333,298.75 223,314.833 222.833,277.75" data-params="{{rooms.igloo}}"/>
+	<polygon room class="room" points="222.833,277.75 223,314.833 284.25,323.25 284.25,277.667" data-params="{{rooms.mansion}}"/>
+    <rect x="230.5" y="217.5" room class="room" width="38.167" height="40.75" data-params="{{rooms.ued_lab}}"/>
+    <rect x="268.667" y="217.5" room class="room" width="27.333" height="40.75" data-params="{{rooms.ued_viewing}}"/>
+    <polygon room class="room" points="330.198,257 330.198,320.989 337.042,320.989 337.042,333.5 381.868,333.5 381.868,312.75 381.868,257"  data-params="{{rooms.lighthouse}}"/>
+    <polygon room class="room" points="435.25,313.5 410.852,313.5 410.716,346.375 435.25,346.375" data-params="{{rooms.tepee}}"/>
+    <polygon room class="room" points="381.868,333.5 383.976,333.5 383.976,346.375 410.716,346.375 410.852,313.5 381.868,313.75" data-params="{{rooms.yurt}}"/>
+	<rect x="435.25" y="332.5" room class="room" width="45" height="27.75" data-params="{{rooms.casa}}"/>
+	<polygon room class="room" points="481.75,332.5 481.75,360.25 483.512,360.25 483.512,372.5 508.992,372.5 508.992,333.5" data-params="{{rooms.treehouse}}"/>
+	<polygon room class="room" points="508.992,333.5 508.992,372.5 581.75,372.5 581.75,334" data-params="{{rooms.chalet}}"/>
+	<rect x="445.75" y="147.5" room class="room" width="33.692" height="21.815" data-params="{{rooms.loft}}"/>
+	<rect x="206" y="38.5" room class="room" width="153.5" height="94.5" data-params="{{rooms.arena}}"/>
 </g>
 </svg>
-
-
 </div>
 
-<!--<script src="bookmeApp.js"></script>-->
-<!--<script src="sanJoseCtrl.js"></script>-->
-<!--<script src="sanJoseDirective.js"></script>-->
-<!--<script src="roomService.js"></script>-->
+<script src="bookmeApp.js"></script>
+<script src="sanJoseCtrl.js"></script>
+<script src="sanJoseDirective.js"></script>
+<script src="roomService.js"></script>
 
 </body>
 </html>
