--- a/maps/san_jose_8.html
+++ b/maps/san_jose_8.html
@@ -27,7 +27,7 @@
 </g>
 <g id="Rooms">
 
-<polygon room class="room" points="106.75,240.25 146,278.75 167,249.25 134.75,217.25" data-params="{{rooms.penthouse}}"/>
+<polygon class="room"room  points="106.75,240.25 146,278.75 167,249.25 134.75,217.25" data-params="{{rooms.penthouse}}"/>
 <polygon room class="room" points="147,279.75 177.5,298.75 193.75,266.25 167,249.25" data-params="{{rooms.bungalow}}"/>
 <polygon room class="room" points="194.667,266.667 178.333,298.75 212,312.833 223.833,277.75"  data-params="{{rooms.houseboat}}"/>
 <polygon room class="room" points="223.75,277.75 212,312.833 249.75,320.75 254.75,284.75"  data-params="{{rooms.lanai}}"/>
