--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,16 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
+    <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
+    <script src="lib/ui-bootstrap-tpls-0.12.0.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/sj7.js"></script>
         <script src="scripts/controllers/sj8.js"></script>
+        <script src="scripts/services/roomService.js"></script>
         <script src="scripts/directives/menu.js"></script>
+        <script src="scripts/directives/room.js"></script>
         <!-- endbuild -->
 </body>
 </html>
