make dist version work

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li ng-class="{active: locationSelected == 'sj7'}"><a ng-href="#/sj7" ng-click="locationSelected='sj7'">SJ7</a></li>
+          <li ng-class="{active: locationSelected == 'sj7' || !locationSelected}"><a ng-href="#/sj7" ng-click="locationSelected='sj7'">SJ7</a></li>
           <li ng-class="{active: locationSelected == 'sj8'}"><a ng-href="#/sj8" ng-click="locationSelected='sj8'">SJ8</a></li>
         </ul>
         <h3 class="text-muted">Room Finder</h3>
@@ -75,8 +75,8 @@
 
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
-    <script src="lib/ui-bootstrap-tpls-0.12.0.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="lib/ui-bootstrap-tpls-0.12.0.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/sj7.js"></script>
         <script src="scripts/controllers/sj8.js"></script>
