make the map work with qtip

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+      <link rel="stylesheet" href="styles/jquery.qtip.css">
 
   </head>
   <body ng-app="roomFinderApp">
@@ -77,6 +78,7 @@
     <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="lib/ui-bootstrap-tpls-0.12.0.js"></script>
+        <script src="lib/jquery.qtip.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/sj7.js"></script>
         <script src="scripts/controllers/sj8.js"></script>
