removed image header and used html

--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,9 @@
           <!--<li ng-class="{active: locationSelected == 'sj7' || !locationSelected}"><a ng-href="#/sj7" ng-click="locationSelected='sj7'">7th Floor</a></li>-->
           <!--<li ng-class="{active: locationSelected == 'sj8'}"><a ng-href="#/sj8" ng-click="locationSelected='sj8'">8th Floor</a></li>-->
         <!--</ul>-->
-        <header class="banner">
-          <img src="images/banner.png" />
+        <header class="banner" style="">
+          <!--<img src="images/banner.png" />-->
+          BOOK THAT ROOM!
         </header>
       </div>
       <h1 class="section" style="margin-left: 40px">Rooms Available</h1>
